ingress/nginx-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ggdevs.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-test-nginx-test-chart
                port:
                  number: 80
